# moonbit-jq

./: .gitignore  Agents.mbt.md  README.mbt.md  moon.mod.json  moon.pkg  moon.pkg.json  moonjq.mbt  moonjq_api_test.mbt  pkg.generated.mbti  query.mbt  refactoring-skills.md
.beads/: issues.jsonl
.github/workflow/: check.yml
.github/workflows/: check.yml
_build/wasm-gc/debug/format/: format.moon_db
_build/wasm-gc/release/check/: all_pkgs.json  check.moon_db  moonjq.mbti  moonjq.mi
_build/wasm-gc/release/format/: README.mbt.md  moonjq_api_test.mbt  (+1 more)
ast/: README.mbt.md  comprehensive_assignment_format_test.mbt  comprehensive_complex_scenarios_test.mbt  comprehensive_edge_cases_test.mbt  comprehensive_function_def_test.mbt  comprehensive_math_control_test.mbt  comprehensive_path_array_test.mbt  comprehensive_string_test.mbt  comprehensive_test.mbt  control_flow_coverage_test.mbt  corner_cases_alternative_test.mbt  corner_cases_ascii_test.mbt  corner_cases_basic_test.mbt  corner_cases_combinations_test.mbt  corner_cases_conversion_iteration_test.mbt  corner_cases_conversion_test.mbt  corner_cases_empty_test.mbt  corner_cases_entries_search_test.mbt  corner_cases_entries_test.mbt  corner_cases_error_handling_test.mbt  corner_cases_foreach_test.mbt  corner_cases_getpath_test.mbt  corner_cases_group_by_test.mbt  corner_cases_has_in_test.mbt  corner_cases_interpolation_test.mbt  corner_cases_iteration_test.mbt  corner_cases_limit_test.mbt  corner_cases_matrix_ascii_test.mbt  corner_cases_membership_test.mbt  corner_cases_minmax_test.mbt  corner_cases_misc_test.mbt  corner_cases_nested_transform_test.mbt  corner_cases_optional_access_test.mbt  corner_cases_paths_filter_test.mbt  corner_cases_paths_optional_test.mbt  corner_cases_predicates_test.mbt  corner_cases_recursion_test.mbt  corner_cases_recursive_descent_test.mbt  corner_cases_reduce_foreach_vars_test.mbt  corner_cases_reduce_test.mbt  (+144 more)
ast/internal/helpers/: README.mbt.md  pkg.generated.mbti  results.mbt
cmd/jq/: main_native.mbt  main_wasm.mbt  moon.pkg  pkg.generated.mbti
cmd/jqlog/: main_native.mbt  main_wasm.mbt  moon.pkg  moon.pkg.json  pkg.generated.mbti
moonjq/: PROGRESS.md  README.md
moonjq/src/ast/: pkg.generated.mbti
moonjq/src/integration/: comprehensive_test.mbt  corner_cases_test.mbt  missing_features_test.mbt
moonjq/src/interpreter/: interpreter.mbt  pkg.generated.mbti
moonjq/src/lexer/: pkg.generated.mbti
moonjq/src/parser/: parser.mbt  pkg.generated.mbti
parser/: README.mbt.md  lex_basic_test.mbt  lex_binding_test.mbt  lex_comment_whitespace_test.mbt  lex_constructs_test.mbt  lex_control_flow_test.mbt  lex_operators_test.mbt  lex_pipeline_test.mbt  lexer.mbt  lexer_coverage_test.mbt  lexer_error.mbt  lexer_identifier.mbt  lexer_number.mbt  lexer_state.mbt  lexer_string.mbt  lexer_symbol.mbt  lexer_test.mbt  moon.pkg  moon.pkg.json  parse_access_test.mbt  parse_array_access_test.mbt  parse_assignment_test.mbt  parse_builtins_array_test.mbt  parse_builtins_basic_test.mbt  parse_builtins_test.mbt  parse_complex_errors_test.mbt  parse_complex_filter_test.mbt  parse_constructs_collection_test.mbt  parse_constructs_control_flow_test.mbt  parse_constructs_test.mbt  parse_error.mbt  parse_error_cases_test.mbt  parse_error_coverage_test.mbt  parse_field_access_test.mbt  parse_identity_test.mbt  parse_literal_test.mbt  parse_literals_test.mbt  parse_ops_arithmetic_test.mbt  parse_ops_comparison_test.mbt  parse_ops_logic_test.mbt  (+22 more)
references/query-json/: CHANGES.md  Makefile  README.md  dune-project  index.html  package-lock.json  package.json  query-json-js.opam  query-json-playground.opam  query-json.opam  query-json.opam.template
references/query-json/.github/workflows/: ci.yml
references/query-json/benchmarks/: README.md  bench.sh
references/query-json/js/: Js.ml  dune
references/query-json/scripts/: make-npm-release.js  release-postinstall.js
references/query-json/source/: Ast.ml  Chalk.ml  Core.ml  Core.mli  Formatting.ml  Interpreter.ml  Json.ml  Lexer.ml  Parser.mly  dune
references/query-json/test/: Test.ml  Test_errors.ml  Test_parse.ml  Test_runtime.ml  cli.t  dune  warnings.t
references/query-json/website/: App.mlx  Base64.ml  Button.mlx  Editor.mlx  Editors.mlx  Footer.mlx  Header.mlx  Icons.mlx  Index.mlx  Modal.mlx  Modal_examples.mlx  Monaco.mlx  Router.ml  TextInput.mlx  dune  styles.css  vite.config.js
references/query-json/website/web/: Web.ml  dune
(+125 files in other folders)
