(executable
 (name js)
 (public_name query-json-js)
 (package query-json-js)
 (libraries query-json.core js_of_ocaml)
 (preprocess
  (pps js_of_ocaml-ppx))
 (js_of_ocaml
  (flags
   (:standard --target-env=browser --effects=cps))
  (sourcemap no))
 (modes
  js
  native ; native is required since to avoid the following error:
         ; Error: No installable mode found for this executable
         ; When public_name is set, one of the following modes is required:
         ; - exe
         ; - native
         ; - byte
         ; - byte_complete
  ))
