(library
 (name app)
 (package query-json-playground)
 (modes melange)
 (enabled_if
  (<> %{os_type} "Win32"))
 (modules :standard \ Index)
 (libraries reason-react melange.dom melange.js melange-json web)
 (preprocess
  (pps melange.ppx reason-react-ppx melange-json.ppx)))

(melange.emit
 (target website)
 (package query-json-playground)
 (modules Index)
 (enabled_if
  (<> %{os_type} "Win32"))
 (module_systems
  (es6 ml.js))
 (libraries reason-react web app)
 (preprocess
  (pps melange.ppx reason-react-ppx)))

(install
 (section bin)
 (enabled_if
  (<> %{os_type} "Win32"))
 (package query-json-playground)
 (source_trees ../node_modules/@tailwindcss/cli)
 (files
  ("../node_modules/@tailwindcss/cli/dist/index.mjs" as tailwind)))

(rule
 (target output.css)
 (package query-json-playground)
 (enabled_if
  (<> %{os_type} "Win32"))
 (deps
  (source_tree .)
  (:input ./styles.css))
 (action
  (run tailwind -i %{input} -o %{target})))
